malda-zk-coprocessor/target/debug/build/eyre-1e5af2d27ba15724/stderr
error[E0407]: method `backtrace` is not a member of trait `Error`
  --> /home/milan/Audit/Sherlock/2025-07-malda-elminnyc99/malda-zk-coprocessor/target/debug/build/eyre-1e5af2d27ba15724/out/probe.rs:19:9
   |
19 | /         fn backtrace(&self) -> Option<&Backtrace> {
20 | |             let backtrace = Backtrace::capture();
21 | |             match backtrace.status() {
22 | |                 BacktraceStatus::Captured | BacktraceStatus::Disabled | _ => {}
23 | |             }
24 | |             unimplemented!()
25 | |         }
   | |_________^ not a member of trait `Error`

error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/milan/Audit/Sherlock/2025-07-malda-elminnyc99/malda-zk-coprocessor/target/debug/build/eyre-1e5af2d27ba15724/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: the feature `backtrace` has been stable since 1.65.0 and no longer requires an attribute to enable
 --> /home/milan/Audit/Sherlock/2025-07-malda-elminnyc99/malda-zk-coprocessor/target/debug/build/eyre-1e5af2d27ba15724/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0407, E0554.
For more information about an error, try `rustc --explain E0407`.
